samples/_failures_safe/1761317188_7ccfda_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c1009c0.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_5c1009c0.c:165:33: error: expected ‘]’ at end of input
  165 |         switch (tokens->tokens[i
      |                                 ^
      |                                 ]
./samples/SAFE/__tmp_5c1009c0.c:165:17: error: switch quantity not an integer
  165 |         switch (tokens->tokens[i
      |                 ^~~~~~
./samples/SAFE/__tmp_5c1009c0.c:165:9: error: expected declaration or statement at end of input
  165 |         switch (tokens->tokens[i
      |         ^~~~~~
./samples/SAFE/__tmp_5c1009c0.c:165:9: error: expected declaration or statement at end of input
